import { render, screen, fireEvent } from '@testing-library/react';
import { describe, it, expect, vi } from 'vitest';
import { FilterLayout } from './FilterLayout';
import { LAYOUT, type LayoutType } from '@/core/stores/home/home.types';
import { normaliseRadixIds } from '@/libs/utils/utils';

// Mock libs - use actual utility functions and icons from lucide-react
vi.mock('@/libs', async () => {
  const actual = await vi.importActual('@/libs');
  return { ...actual };
});

describe('FilterLayout', () => {
  it('renders with default selected tab', () => {
    render(<FilterLayout />);

    expect(screen.getByText('Layout')).toBeInTheDocument();
  });

  it('calls onTabChange when tab is clicked', () => {
    const onTabChange = vi.fn();
    render(<FilterLayout onTabChange={onTabChange} />);
    fireEvent.click(screen.getByText('Wide'));
    expect(onTabChange).toHaveBeenCalledWith('wide');
  });

  it('handles all tab types correctly', () => {
    const onTabChange = vi.fn();
    render(<FilterLayout onTabChange={onTabChange} />);

    ([LAYOUT.COLUMNS, LAYOUT.WIDE] as LayoutType[]).forEach((tab) => {
      const label = tab === LAYOUT.COLUMNS ? 'Columns' : 'Wide';
      fireEvent.click(screen.getByText(label));
      expect(onTabChange).toHaveBeenCalledWith(tab);
    });
  });

  it('rerenders with different selected tabs', () => {
    const { rerender } = render(<FilterLayout selectedTab={LAYOUT.COLUMNS} />);

    let columnsItem = screen.getByText('Columns').closest('[data-testid="filter-item"]');
    const wideItem = screen.getByText('Wide').closest('[data-testid="filter-item"]');
    expect(columnsItem).toBeInTheDocument();
    expect(wideItem).toBeInTheDocument();

    rerender(<FilterLayout selectedTab={LAYOUT.WIDE} />);
    columnsItem = screen.getByText('Columns').closest('[data-testid="filter-item"]');
    const wideItem2 = screen.getByText('Wide').closest('[data-testid="filter-item"]');
    expect(columnsItem).toBeInTheDocument();
    expect(wideItem2).toBeInTheDocument();
  });
});

describe('FilterLayout - Snapshots', () => {
  it('matches snapshot with default props', () => {
    const { container } = render(<FilterLayout />);
    const normalisedContainer = normaliseRadixIds(container);
    expect(normalisedContainer.firstChild).toMatchSnapshot();
  });

  it('matches snapshot with Columns selected tab', () => {
    const { container } = render(<FilterLayout selectedTab={LAYOUT.COLUMNS} />);
    const normalisedContainer = normaliseRadixIds(container);
    expect(normalisedContainer.firstChild).toMatchSnapshot();
  });

  it('matches snapshot with Wide selected tab', () => {
    const { container } = render(<FilterLayout selectedTab={LAYOUT.WIDE} />);
    const normalisedContainer = normaliseRadixIds(container);
    expect(normalisedContainer.firstChild).toMatchSnapshot();
  });
});
